Bug 44388 - Printing/Exporting to PDF adds text to the side of form elements ('checkbox',...)
Summary: Printing/Exporting to PDF adds text to the side of form elements ('checkbox',...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: All Linux (All)
: low normal
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-02 09:09 UTC by Hans-Peter Oeri
Modified: 2016-10-25 19:17 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
writer document with form elements (142.16 KB, application/vnd.oasis.opendocument.text)
2012-01-02 09:09 UTC, Hans-Peter Oeri
Details
printout in pdf format (289.70 KB, application/pdf)
2012-01-02 09:10 UTC, Hans-Peter Oeri
Details
printout in ps format (1.06 MB, application/postscript)
2012-01-02 09:10 UTC, Hans-Peter Oeri
Details
printout in PDF 2015-01-05 (72.53 KB, application/pdf)
2015-01-05 10:05 UTC, Hans-Peter Oeri
Details
sample document with checkboxes of different sizes (12.25 KB, application/vnd.oasis.opendocument.text)
2015-06-29 14:12 UTC, Michael Weghorn
Details
print result of file with different checkbox sizes (14.42 KB, application/pdf)
2015-06-29 14:14 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hans-Peter Oeri 2012-01-02 09:09:02 UTC
Created attachment 55048 [details]
writer document with form elements

Printing with printer language PDF or exporting to PDF a document with form elements, the resulting PDF has added further text to the side of form elements ('checkbox',...).

Exporting to actual PDF forms, this does not happen. The graphical representation of the elements changes, however.

Printing with printer language PS does not include that additional text either.
Comment 1 Hans-Peter Oeri 2012-01-02 09:10:09 UTC
Created attachment 55049 [details]
printout in pdf format
Comment 2 Hans-Peter Oeri 2012-01-02 09:10:42 UTC
Created attachment 55050 [details]
printout in ps format
Comment 3 Cor Nouws 2012-01-21 15:20:10 UTC
Hi Hans-Peter,
I've seen this before, I think.

I think I solved it by removing the default names of the elements, or narrowing the boxes, or ... ?
Abyway, I confirm this, also in 3.5.0rc1
Comment 4 Chris Peñalver 2012-05-15 04:24:34 UTC
1) lsb_release -rd
Description: Ubuntu 12.04 LTS
Release: 12.04

2) apt-cache policy libreoffice-writer
libreoffice-writer:
  Installed: 1:3.5.3-0ubuntu1
  Candidate: 1:3.5.3-0ubuntu1
  Version table:
 *** 1:3.5.3-0ubuntu1 0
        500 http://us.archive.ubuntu.com/ubuntu/ precise-updates/main i386 Packages
        100 /var/lib/dpkg/status
     1:3.5.2-2ubuntu1 0
        500 http://us.archive.ubuntu.com/ubuntu/ precise/main i386 Packages

apt-cache policy acroread
acroread:
  Installed: 9.5.1-1precise1
  Candidate: 9.5.1-1precise1
  Version table:
 *** 9.5.1-1precise1 0
        500 http://archive.canonical.com/ubuntu/ precise/partner i386 Packages
        100 /var/lib/dpkg/status

3) What is expected to happen in Writer via the Terminal:
cd ~/Desktop && wget https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/891522/+attachment/2600734/+files/testdocument.odt && lowriter -nologo testdocument.odt

and either:
File -> Print -> button OK

or:
File -> Print -> tab Options -> check checkbox Print to File

and the resulting print or PDF looks as it does in Writer.

4) What happens instead the print and PDF have text overlapping as in the PDF https://bugs.launchpad.net/ubuntu/+source/libreoffice/+bug/891522/+attachment/2599557/+files/printout .

WORKAROUND: For printing, switch 'Printer Language Type' to PostScript.

WORKAROUND: For exporting PDF, use File -> Export as PDF.
Comment 5 A (Andy) 2014-12-25 12:10:33 UTC
I tested it with LO 4.4.0.0.beta1 (Win 8.1) with EXPORT AS PDF and with PRINT -> pdf printer.

-> I could not reproduce it as it is seen in the pdf attachment (but I don't see the logo in the top left).  

This bug is already quite old.  Therefore, is this issue for others still reproducible with the latest releases of LO?
Or is this a Linux only issue?
Comment 6 Hans-Peter Oeri 2015-01-05 10:04:43 UTC
As of 2015-01-05, the issue still stands (see attached PDF printout).

The added text seems to be the control's 'label' text. Emptying all 'label' properties, seems a good workaround.

Still, the handling of PDF control 'labels' differs from screen an PS.
Comment 7 Hans-Peter Oeri 2015-01-05 10:05:30 UTC
Created attachment 111757 [details]
printout in PDF 2015-01-05
Comment 8 Cor Nouws 2015-01-05 19:27:19 UTC
(In reply to Hans-Peter Oeri from comment #6)
> The added text seems to be the control's 'label' text. Emptying all 'label'
> properties, seems a good workaround.

That was what I meant to say with my comment #3. Sorry if that was not clear ;)
Comment 9 Nikos 2015-01-06 10:38:17 UTC
I am also affected by this. I wanted to add that it only occurs when ISO 19005-1 conformity is checked (which however is something preferred where I work.
This is on 4.4.0.1 and 4.0.5 (regardless of OS).

However, on current master  (Version: 4.5.0.0.alpha0+
Build ID: 57626f2132f73e4e42b31e364b25c5867336e718) the problem occurs irrespective of the selection of PDF/A-1a
Comment 10 Michael Weghorn 2015-06-29 14:12:37 UTC
Created attachment 116921 [details]
sample document with checkboxes of different sizes

We also experience this problem.

I have tested with LibreOffice 5.0.0 RC2, Build ID: a26d58f11b99b6aeddf7f7884effea188cc6e512 on Debian Jessie.

I noticed that it actually depends on the size of the checkbox whether the label is printed or not.

I attach a sample file with 3 checkboxes where the checkbox sizes differ. All checkboxes have the same label "LABEL". The first checkbox has a width of 0.38 cm and the same height. For the other two checkboxes, either the width or the height have been changed.

When printing the document, the label of the first checkbox is printed (and overlaps the text next to the checkbox). The label of the other two checkboxes is not printed. However, when I change the size of the other checkboxes to be the same as that of the first one, their labels are also printed and overlap the respective text next to them.
Comment 11 Michael Weghorn 2015-06-29 14:14:14 UTC
Created attachment 116922 [details]
print result of file with different checkbox sizes

I also attach the print result that I get from the document with the three different check boxes (printed with PDF printer).
Comment 12 Michael Weghorn 2015-06-29 14:38:23 UTC
(In reply to Michael Weghorn from comment #10)
> When printing the document, the label of the first checkbox is printed (and
> overlaps the text next to the checkbox). The label of the other two
> checkboxes is not printed.

Further testing showed that it depends on the LibreOffice version which labels  in the sample document with the checkboxes are actually printed - it somehow differs from version to version...
Comment 13 Commit Notification 2015-08-13 16:26:41 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=86b47f5138c0c5b882359a48052a796bc91a5afb

tdf#44388: handle the NULL clip correctly for pdf output

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2015-08-17 07:48:43 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a9b3f13abc4ba780ce5a48fa910de631644da236&h=libreoffice-5-0

tdf#44388: handle the NULL clip correctly for pdf output

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.