tdf#44388: handle the NULL clip correctly for pdf output

With the rework to use basegfx polygon clipping (a334752), the case
'fully clipped away', aka NULL clip, aka nothing visible, stopped
working.

Manifests itself as an empty clip polygon, but with m_bClipRegion being
true. Explicitely write out as zero-surface clip polygon.

i#65128 is related.

Change-Id: I57389fcd057d75dfa4e0de9ebb86794437c70b55